[gd_scene load_steps=5 format=3 uid="uid://c6ue14hby6w0t"]

[ext_resource type="Script" path="res://scenes/GUI.gd" id="1_5p8qh"]
[ext_resource type="PackedScene" uid="uid://c4mvkylcr4rq7" path="res://scenes/buttons/quit_button.tscn" id="1_ukfob"]
[ext_resource type="PackedScene" uid="uid://qt6jp17s173y" path="res://scenes/buttons/resume_button.tscn" id="2_oflvb"]
[ext_resource type="PackedScene" uid="uid://bocuq6legr4oe" path="res://scenes/buttons/restart_button.tscn" id="3_70ttj"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_5p8qh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -15.5
offset_right = 96.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25

[node name="ResumeButton" parent="Control/VBoxContainer" instance=ExtResource("2_oflvb")]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="RestartButton" parent="Control/VBoxContainer" instance=ExtResource("3_70ttj")]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="QuitButton" parent="Control/VBoxContainer" instance=ExtResource("1_ukfob")]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[connection signal="pressed" from="Control/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
